<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkActivityCoordinator</string>
    <string name="action_settings">Settings</string>
    <string name="default_uid">opso</string>
    <string name="default_pwd">none</string>
    <string name="baseURL">http://osatt.dynu.com:1081/nac1801</string>
    <string name="enter_name">Enter Name</string>
    <string name="title">Enter Credentials</string>
    <string name="password_box_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="cancel_button">Cancel</string>

    <string name="probability_going_base_text">% Likely to Go</string>
    <string name="not_going">Not Going</string>
    <string name="maybe">Maybe</string>
    <string name="going">Going</string>
    <string name="activity_type">Activity Type:</string>
    <string name="start_time">Start Time:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="description_text">Description</string>
    <string name="name_text">Name</string>
    <string name="end_time">End Time:</string>

    <string name="sms_hyperlink_prefix">http://nacshare.com/ics4u/</string>



</resources>
