<?xml version = "1.0" encoding = "utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    tools:context=".LoginActivity"
    android:id="@+id/relativeLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textColor="#ff7aff24"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:focusable="true"
        android:hint="@string/enter_name"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_edit_text"
        android:layout_below="@+id/login_edit_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_box_hint"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_edit_text"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="168dp"
        android:text="@string/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</android.support.constraint.ConstraintLayout>